agregue registro persona vulnerable

--- a/Recursos/vistas/home/home.html
+++ b/Recursos/vistas/home/home.html
@@ -27,6 +27,7 @@
             <li><a class="nav-link" href="#">Quiénes Somos</a></li>
             <li><a class="nav-link" id="boton-reporte-falla" href="#">Reportar falla</a>
             <li><a class="nav-link" id="boton-tabla-heladera" href="#">Heladeras</a>
+            <li><a class="nav-link" id="boton-cargar-vulnerble" href="#">Persona Vulnerable</a>
             </li>
             <li>
                 <ul class="menu-perfil">
